--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
                                             <li><a href="https://youtu.be/1PdDC-7HtqU" rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     12</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=Rtze7olcF4I" rel="nofollow"
+                                                    target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    13</a></li>
                                         </ul>
                                         </p>
                                     </div>
