Group Homework 01 Updated

--- a/index.html
+++ b/index.html
@@ -807,6 +807,26 @@
                                                         </div>
                                                     </div>
                                                 </li>
+                                                <li class="pt-3 pb-0 sm:pt-4">
+                                                    <div class="flex items-center space-x-4">
+                                                        <div class="flex-shrink-0">
+                                                            <img class="w-8 h-8 rounded-full"
+                                                                src="https://cdn.dribbble.com/users/131684/screenshots/667114/_pencil.gif"
+                                                                alt="Rafi image">
+                                                        </div>
+                                                        <div class="flex-1 min-w-0">
+                                                            <p
+                                                                class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
+                                                                <a href="https://drive.google.com/file/d/15nlF5YsH2-p2V5rxF1fzL3n7mK025Oeb/view?usp=sharing"
+                                                                    target="_blank">Group Homework 01</a>
+                                                            </p>
+                                                        </div>
+                                                        <div
+                                                            class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
+                                                            Last Date - 20/02/2022
+                                                        </div>
+                                                    </div>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -950,6 +970,26 @@
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-gray">
                                                             CT 113731
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                                <li class="pt-3 pb-0 sm:pt-4">
+                                                    <div class="flex items-center space-x-4">
+                                                        <div class="flex-shrink-0">
+                                                            <img class="w-8 h-8 rounded-full"
+                                                                src="https://cdn.dribbble.com/users/131684/screenshots/667114/_pencil.gif"
+                                                                alt="Mehadi image">
+                                                        </div>
+                                                        <div class="flex-1 min-w-0">
+                                                            <p
+                                                                class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
+                                                                <a href="https://drive.google.com/file/d/14xCTxZc3SQBh-g4G6gRJWx48nu8UOdVl/view?usp=sharing"
+                                                                    target="_blank">Group Homework 01</a>
+                                                            </p>
+                                                        </div>
+                                                        <div
+                                                            class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
+                                                            Last Date - 20/02/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -1099,6 +1139,26 @@
                                                         </div>
                                                     </div>
                                                 </li>
+                                                <li class="pt-3 pb-0 sm:pt-4">
+                                                    <div class="flex items-center space-x-4">
+                                                        <div class="flex-shrink-0">
+                                                            <img class="w-8 h-8 rounded-full"
+                                                                src="https://cdn.dribbble.com/users/131684/screenshots/667114/_pencil.gif"
+                                                                alt="Abdullah image">
+                                                        </div>
+                                                        <div class="flex-1 min-w-0">
+                                                            <p
+                                                                class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
+                                                                <a href="https://drive.google.com/file/d/1uFyDiRejiP7WJaFwPajQISY-MuTf5KIA/view?usp=sharing"
+                                                                    target="_blank">Group Homework 01</a>
+                                                            </p>
+                                                        </div>
+                                                        <div
+                                                            class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
+                                                            Last Date - 20/02/2022
+                                                        </div>
+                                                    </div>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -1241,6 +1301,27 @@
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-gray">
                                                             CT 44849
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                                <li class="pt-3 pb-0 sm:pt-4">
+                                                    <div class="flex items-center space-x-4">
+                                                        <div class="flex-shrink-0">
+                                                            <img class="w-8 h-8 rounded-full"
+                                                                src="https://cdn.dribbble.com/users/131684/screenshots/667114/_pencil.gif"
+                                                                alt="Imran image">
+                                                        </div>
+                                                        <div class="flex-1 min-w-0">
+                                                            <p
+                                                                class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
+                                                                <a href="https://drive.google.com/file/d/1MYMcScGn0Uq1nDqKJ40LMRBqoq6Td4pe/view?usp=sharing"
+                                                                    target="_blank">Group Hoemwork 01</a>
+
+                                                            </p>
+                                                        </div>
+                                                        <div
+                                                            class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
+                                                            Last Date - 20/02/2022
                                                         </div>
                                                     </div>
                                                 </li>
