Class 14 Link Updated - Basic JS

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                         </button>
                                     </div>
                                     <!-- Modal body VDO-->
-                                    <div class="p-6 space-y-6">
+                                    <div class="p-6 space-y-1">
                                         <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
                                         <ul class="list-disc pl-5 dark:text-gray-400 text-gray-500">
                                             <li><a href="https://youtu.be/3h0DjT6ebwk" target="_blank"
@@ -227,6 +227,10 @@
                                                     target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     13</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=PnwSqRvYRJo" rel="nofollow"
+                                                    target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    14 (Basic JavaScript)</a></li>
                                         </ul>
                                         </p>
                                     </div>
