Group Homework 02 Task Updated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,64 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <title>Batch || CTG - 247</title>
+    <!-- jQuery for Pop Up -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Sweet Alert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--     
+    
+    <script>
+
+        $(document).ready(function () {
+            Swal.fire({
+                title: '',
+                text: '',
+                imageUrl: '/images/size.png',
+                imageWidth: 500,
+                imageHeight: 360,
+                imageAlt: 'Custom image',
+            });
+        });
+
+
+    </script> -->
+
+
+    <!-- <script>
+
+        $(document).ready(function () {
+            swal.fire({
+                title: '',
+                width: 600,
+                padding: '3em',
+                color: '#716add',
+                background: '#fff url(https://i.ibb.co/0hkwrM6/try.png)',
+                backdrop: `
+    rgba(0,0,123,0.4)
+    url("/images/nyan-cat.gif")
+    left top
+    no-repeat
+  `
+            });
+        });
+
+
+    </script> -->
+
+    <!-- <script>
+
+        $(document).ready(function () {
+            swal.fire({
+                title: 'Website Information Updated!',
+                text: 'For full update log please contact with Yasir',
+                type: 'success',
+                confirmButtonText: 'Noted 👍!'
+            });
+        });
+
+
+    </script> -->
 </head>
 
 <body>
@@ -821,13 +879,13 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/15nlF5YsH2-p2V5rxF1fzL3n7mK025Oeb/view?usp=sharing"
-                                                                    target="_blank">Group Homework 01</a>
+                                                                <a href="https://drive.google.com/file/d/1nic0mQm_P6165Ym0NjRtm2CKGcFK2yov/view?usp=sharing"
+                                                                    target="_blank">Group Homework 02</a>
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 20/02/2022
+                                                            Last Date - 27/02/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -987,13 +1045,13 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/14xCTxZc3SQBh-g4G6gRJWx48nu8UOdVl/view?usp=sharing"
-                                                                    target="_blank">Group Homework 01</a>
+                                                                <a href="https://drive.google.com/file/d/18WhqlH44mK4vi7eI-Zz1MI8RabLxzqJ0/view?usp=sharing"
+                                                                    target="_blank">Group Homework 02</a>
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 20/02/2022
+                                                            Last Date - 27/02/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -1153,13 +1211,13 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/1uFyDiRejiP7WJaFwPajQISY-MuTf5KIA/view?usp=sharing"
-                                                                    target="_blank">Group Homework 01</a>
+                                                                <a href="https://drive.google.com/file/d/1r-cIYRfXOJT5F15lw4QR4rvyeBt5AAUC/view?usp=sharing"
+                                                                    target="_blank">Group Homework 02</a>
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 20/02/2022
+                                                            Last Date - 27/02/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -1318,14 +1376,14 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/1MYMcScGn0Uq1nDqKJ40LMRBqoq6Td4pe/view?usp=sharing"
-                                                                    target="_blank">Group Hoemwork 01</a>
+                                                                <a href="https://drive.google.com/file/d/1dvBhWFOEnI1WOAn6np7HENQo-hD-9qxg/view?usp=sharing"
+                                                                    target="_blank">Group Homework 02</a>
 
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 20/02/2022
+                                                            Last Date - 27/02/2022
                                                         </div>
                                                     </div>
                                                 </li>
