Title Slightly Changed

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <title>Batch || CTG - 247</title>
+    <title>Batch || CT - 247</title>
     <!-- jQuery for Pop Up -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Sweet Alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!--     
-    
+
+
     <script>
 
         $(document).ready(function () {
@@ -33,7 +33,7 @@
         });
 
 
-    </script> -->
+    </script>
 
 
     <!-- <script>
