jQuery Class Video Link Updated

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Sweet Alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-    <script>
+    <!-- <script>
 
         $(document).ready(function () {
             Swal.fire({
@@ -33,7 +31,7 @@
         });
 
 
-    </script>
+    </script> -->
 
 
     <!-- <script>
@@ -289,6 +287,13 @@
                                                     target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     14 (Basic JavaScript)</a></li>
+                                            <li><a href="https://youtu.be/1_VbINwoJQ4" rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    15 (Part 01) (Media Query , Basic JavaScript, Basic jQuery)</a></li>
+                                            <li><a href="https://youtu.be/LOtRXSFzcJY
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    15 (Part 02) (Media Query , Basic JavaScript, Basic jQuery)</a></li>
                                         </ul>
                                         </p>
                                     </div>
@@ -1449,8 +1454,7 @@
 
         <!-- Footer -->
 
-    </div>
-    <script src=" https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
+        <script src=" https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
 </body>
 
 </html>
