jQuery Class Video Link Updated

--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     15 (Part 02) (Media Query , Basic JavaScript, Basic jQuery)</a></li>
+                                            <li><a href="https://youtu.be/WwuFli08xlQ
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    16 (jQuery Plugins)</a></li>
                                         </ul>
                                         </p>
                                     </div>
