jQuery Class Video Link Updated

--- a/index.html
+++ b/index.html
@@ -298,6 +298,14 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     16 (jQuery Plugins)</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=4bug9cy0oy8
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    17 (Part 1)(jQuery Last Class)</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=csntygNzmgY
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    17 (Part 2)(jQuery Last Class)</a></li>
                                         </ul>
                                         </p>
                                     </div>
