Wordpress Class VDO and Homework 04 Updated

--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     17 (Part 2)(jQuery Last Class)</a></li>
+                                            <li><a href="https://youtu.be/mHPF15toYpo
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    18 (Wordpress Installation)</a></li>
                                         </ul>
                                         </p>
                                     </div>
@@ -896,13 +900,13 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/1tndWNhpauSqQD9yeb4QFs6xSty12PNrQ/view?usp=sharing"
-                                                                    target="_blank">Group Homework 03</a>
+                                                                <a href="https://drive.google.com/file/d/1KcooSPRf3nk3bYtBtJvxKqyO6ToPTut3/view?usp=sharing"
+                                                                    target="_blank">Group Homework 04</a>
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 06/03/2022
+                                                            Last Date - 13/03/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -1062,13 +1066,13 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/1N1bpUtUf_XGjIyvOUSlLZpO9TzH72W5o/view?usp=sharing"
-                                                                    target="_blank">Group Homework 03</a>
+                                                                <a href="https://drive.google.com/file/d/1V2pk_QJ0ubUA0q45suePUhFNPBkjZLGK/view?usp=sharing"
+                                                                    target="_blank">Group Homework 04</a>
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 06/03/2022
+                                                            Last Date - 13/03/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -1228,13 +1232,13 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/1djh3LOwhwZeQ5jqUKa_ndm8MM-Imq546/view?usp=sharing"
-                                                                    target="_blank">Group Homework 03</a>
+                                                                <a href="https://drive.google.com/file/d/1k8cH5o-QCK1a_HLF9SiBGKILAK5S6Hcq/view?usp=sharing"
+                                                                    target="_blank">Group Homework 04</a>
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 06/03/2022
+                                                            Last Date - 13/03/2022
                                                         </div>
                                                     </div>
                                                 </li>
@@ -1393,14 +1397,14 @@
                                                         <div class="flex-1 min-w-0">
                                                             <p
                                                                 class="text-sm font-medium text-gray-900 truncate dark:text-blue-300">
-                                                                <a href="https://drive.google.com/file/d/1XyQzr3sSp5E4MV6AXbt49rp1tSHoFjT4/view?usp=sharing"
-                                                                    target="_blank">Group Homework 03</a>
+                                                                <a href="https://drive.google.com/file/d/1O6ndb7wH2PSW3sn0bvZhagU-RXc2KnKo/view?usp=sharing"
+                                                                    target="_blank">Group Homework 04</a>
 
                                                             </p>
                                                         </div>
                                                         <div
                                                             class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-blue-300">
-                                                            Last Date - 06/03/2022
+                                                            Last Date - 13/03/2022
                                                         </div>
                                                     </div>
                                                 </li>
