Wordpress Class (Theme) Video Updated

--- a/index.html
+++ b/index.html
@@ -310,6 +310,10 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     18 (Wordpress Installation)</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=COs08nuUmC4
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    19 (Wordpress Theme Astra Modify)</a></li>
                                         </ul>
                                         </p>
                                     </div>
