Wordpress Class Video Link & Elementor Link Updated

--- a/index.html
+++ b/index.html
@@ -314,6 +314,10 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     19 (Wordpress Theme Astra Modify)</a></li>
+                                            <li><a href="https://youtu.be/uaAIHNfAibs
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    20 (PSD to Wordpress)</a></li>
                                         </ul>
                                         </p>
                                     </div>
@@ -421,6 +425,12 @@
                                                     target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Second Exam
                                                     (PSD File)</a>
+                                            </li>
+                                            <li><a href="https://gbfile.com/3c4de9d370e91b37/elementor-pro-package_v3.6.4.zip?fbclid=IwAR1x-0o7TBMJNmxLguGX9McKa6HMzVJZVkPVV-gZqRI7y5c95rrzoJjHOFc"
+                                                    target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Elementor
+                                                    Pro
+                                                    (Software)</a>
                                             </li>
 
                                         </ul>
