Class vdo link updated

--- a/index.html
+++ b/index.html
@@ -317,7 +317,11 @@
                                             <li><a href="https://youtu.be/uaAIHNfAibs
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    20 (PSD to Wordpress)</a></li>
+                                                    20 (PSD to Wordpress, Form)</a></li>
+                                            <li><a href="https://youtu.be/4dd_tThdz3g
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    21 (Wordpress Slider Etc)</a></li>
                                         </ul>
                                         </p>
                                     </div>
