Class vdo link (freelancing)  updated

--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     21 (Wordpress Slider Etc)</a></li>
+                                            <li><a href="https://drive.google.com/file/d/1NZ1OvB8O_822oio0YKBecUAysXAUwlzC/view
+                                                " rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    22 (Freelancing - Fiverr Basic)</a></li>
                                         </ul>
                                         </p>
                                     </div>
