--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
                                                 " rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     22 (Freelancing - Fiverr Basic)</a></li>
+                                            <li><a href="https://drive.google.com/file/d/14xZtEqyP6MBhCCjMFxyckB5hPiEL2MS7/view"
+                                                    rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    23 (Freelancing - Fiverr Gig)</a></li>
                                         </ul>
                                         </p>
                                     </div>
