Woocommerce Class video Updated

--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@
                                                     rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     23 (Freelancing - Fiverr Gig)</a></li>
+                                            <li><a href="https://youtu.be/p5kKGCUL1nY" rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    24 (Wordpress - Woocommerce)</a></li>
                                         </ul>
                                         </p>
                                     </div>
